# Major-Project-2021

./: README.md  cmd_spin.py  index.md  main.py  pyproject.toml  remote.py  todo.py
.sql files/: bookstore_books.sql  bookstore_credentials.sql  bookstore_customer.sql  bookstore_employees.sql  bookstore_notification.sql  bookstore_test.sql  bookstore_transactions.sql  sql_forlocalhost.sql  sql_forremotehost.sql
Adithya's Files/: README.md
Akash's files/: README.md
Ascii Art/: ascii.py  asciioutput.txt  output.txt  test.py
Barath's FIles/: README.md  isbn.py  main.py  managebooks.py  noti.py  notigui.py  script.py  valuecontrol.py
Employee/: main.py
Flow1/: art.py  cmd_spin.py  employee.py  encrypt.py  evaltest.py  firstmain.py  glogin_login.py  glogin_register.py  isbn.py  login.py  managebooks.py  managetransactions.py  noti.py  plot.py  valuecontrol.py
Google Books API/: script.py
Meetups/: README.md
Navigation/: keyboardmodule.py
Navigation/pynput testing/: pynput.py
Notification/: noti.py  notigui.py
OAuth/: app.spec  encrypt.py  facebookoauth.py  glogin_login.py  glogin_register.py  hideoutput.py  login.py  oauth.py  oauthusage.py
OAuth/templates/: LoginSucess.css  LoginSucess.html  Page-1.css  Page-1.html  home.html  nicepage.css
Others/: firebase.py  gameplan.py  loops.py  transidgen.py
SQL Connection/: Login.py  clearscreen.py  cmd_spin.py  func.py  functest.py  loops.py  managebooks.py  sqlcommands.py  sqltest.py  test.py  valuecontrol.py  valuecontrolusage.py
SQL Connection/functiontest/: fuctioncallfile.py  (+1 more)
Spin/: cmd_spin.py
