[tool.poetry]
name = "repl_python3_Major-Project-2021"
version = "0.1.0"
description = ""
authors = ["AkashShanmugara <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.9"
Authlib = "^0.15.4"
click = "^8.0.1"
Flask = "^2.0.1"
keyboard = "^0.13.5"
pyfiglet = "^0.8.post1"
stdiomask = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
